add main classes to test it under jenkins

--- a/ModuleStepOne/pom.xml
+++ b/ModuleStepOne/pom.xml
@@ -6,4 +6,14 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>ModuleStepOne</artifactId>
+  
+  <dependencies>
+  <dependency>
+	   <groupId>com.hj</groupId>
+	  <artifactId>ModuleStepTwo</artifactId>
+	  <version>0.0.1-SNAPSHOT</version>
+  </dependency>
+  
+  
+  </dependencies>
 </project>
