--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,14 @@
   <artifactId>demoMultiModule</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <dependencies>
+  	<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+  </dependency>
+  </dependencies>
   <modules>
   	<module>ModuleStepOne</module>
   	<module>ModuleStepTwo</module>
