--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Metadata
-sonar.projectKey=com.hj:demoMultiModule
+sonar.projectKey=uniquecode1254
 sonar.projectName=demoMultiModule
 sonar.projectVersion=1.0.0
 
@@ -9,7 +9,7 @@ sonar.sourceEncoding=UTF-8
 sonar.language=java
 
 # Tests
-sonar.tests=src/test
+#sonar.tests=src/test
 sonar.junit.reportsPath=target/surefire-reports
 sonar.surefire.reportsPath=target/surefire-reports
 sonar.jacoco.reportPath=target/jacoco.exec
