--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Metadata
-sonar.projectKey=uniquecode1254
-sonar.projectName=demoMultiModule
+sonar.projectKey=com.hj:ModuleStepTwo
+sonar.projectName=ModuleStepTwo
 sonar.projectVersion=1.0.0
 
 # Source information
@@ -9,7 +9,7 @@ sonar.sourceEncoding=UTF-8
 sonar.language=java
 
 # Tests
-#sonar.tests=src/test
+sonar.tests=src/test
 sonar.junit.reportsPath=target/surefire-reports
 sonar.surefire.reportsPath=target/surefire-reports
 sonar.jacoco.reportPath=target/jacoco.exec
