--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Metadata
-sonar.projectKey=com.hj:demoMultiModule
+sonar.projectKey=demoMavenMultiModule
 sonar.projectName=demoMultiModule
 sonar.projectVersion=1.0.0
 
