--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	  <maven.compiler.target>8</maven.compiler.target>
   </properties>
   
-  <build>
+ <!--  <build>
   <plugins>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
@@ -40,7 +40,7 @@
       </executions>
     </plugin>
   </plugins>
-</build>
+</build> -->
   
   
   <dependencies>
